--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Python
 __pycache__/
 *.py[cod]
@@ -24,3 +25,6 @@ Thumbs.db
 
 # Logs
 *.log
+test_instalacao_amial.py
+MELHORIAS_DASHBOARD.md
+test_results/20260115_173527_01_station_list.json
