feat: Enhance configuration management and improve alert handling
- Update .gitignore to include environment variable files and test results directory
- Remove default hardcoded accounts from app.py to streamline account loading
- Introduce logic to defer adding disconnect alerts until after alarm checks to avoid duplicates
- Add a new test script for comprehensive API testing and result logging

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,10 @@ Thumbs.db
 *.log
 test_instalacao_amial.py
 MELHORIAS_DASHBOARD.md
-test_results/20260115_173527_01_station_list.json
+test_results/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
